crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@java__ant-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/java/ant-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: dac5a9a56c89053fbcbf5d2c14618247b62584dfb1af4aa9602510a2f048b779
