crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@java__maven-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/java/maven-exercise
---
- src
- src/main
- src/main/java
- src/main/java/fi
- src/main/java/fi/helsinki
- src/main/java/fi/helsinki/cs
- src/main/java/fi/helsinki/cs/maventest
- src/main/java/fi/helsinki/cs/maventest/App.java

